<resources>
    <string name="app_name">Entrenapp</string>
    <string name="titulo_splash">img-splash</string>
    <string name="txtPrincipal">Que comience el juego...</string>
    <string name="txtBienvenido">Bienvenido</string>
    <string name="boton_gym">boton_Gym</string>
    <string name="imagen">Imagen</string>
    <string name="boton2">btn2</string>
    <string name="boton3">Boton3</string>
    <string name="boton4">Boton4</string>
    <string name="boton5">Boton5</string>
    <string name="boton6">Boton6</string>
    <string name="boton7">Boton7</string>
    <string name="boton_casa">boton_Casa</string>
    <string name="Titulo_Organizacion">Entrenamiento deportivo semanal: cómo organizar la rutinas para no procrastinar.</string>
    <string name="Parrafo1_organizacion">La mejor manera de organizarse los entrenamientos es siguiendo un planning semanal, sobre todo si las visitas son al gimnasio. Así, se pueden trabajar todos los grupos musculares de manera ordenada pero sin forzarlos, dejándoles el tiempo necesario de descanso para que se los músculos se recuperen y puedan crecer.</string>
    <string name="Parrafo2_organizacion">Sea en casa o en el gimnasio, la serie de rutinas propuestas pueden adaptarse a diferentes niveles y, aunque de base solo contemplan cuatro días de actividad física, pueden intercalarse con otras actividades como las sesiones dirigidas del gimnasio de trabajo cardiovascular o el running. Si después de cada entrenamiento todavía quedan ganas, se pueden añadir unos 20 minutos de cardio a media capacidad y, sobre todo, nunca hay que olvidar el calentamiento antes de empezar.</string>
    <string name="imagenportada">ImagenPortada</string>
    <string name="texto_footer">Texto_footer</string>
    <string name="texto_hipertrofia">Para lograr la hipertrofia muscular, enfócate en el entrenamiento de fuerza con ejercicios como levantamiento de pesas, sentadillas, press de banca y dominadas. Realiza de 3 a 5 series de 8 a 12 repeticiones por ejercicio para asegurar un volumen de trabajo adecuado. Aumenta gradualmente la carga y la dificultad de los ejercicios para progresar. Descansa lo suficiente para permitir la recuperación muscular y asegúrate de tener una nutrición adecuada, incluyendo suficiente ingesta de proteínas y calorías. Varía tus ejercicios para estimular diferentes músculos y evita lesiones al mantener una técnica adecuada. Recuerda que la hipertrofia es un proceso gradual que requiere tiempo y consistencia.</string>
    <string name="consejo2">2- Empieza de manera gradual: No te sobrecargues al principio. Comienza con ejercicios de baja intensidad y ve aumentando gradualmente la carga y la dificultad a medida que tu cuerpo se adapta.</string>
    <string name="titulo_consejo">CONSEJOS FIT: Posibles consejos que te pueden ayudar.</string>
    <string name="consejo1">1- Establece metas realistas: Define metas claras y alcanzables que te motiven a largo plazo. Pueden ser metas relacionadas con la pérdida de peso, la mejora de la fuerza, la resistencia o cualquier otro objetivo que desees lograr.</string>
    <string name="consejo3">3- Cuida tu alimentación: El ejercicio va de la mano con una nutrición adecuada. Asegúrate de comer una dieta equilibrada y variada, rica en frutas, verduras, proteínas magras y granos enteros. Consulta con un nutricionista si necesitas ayuda para diseñar un plan de alimentación adecuado.</string>
    <string name="boton_calentamiento">boton_calentamiento</string>
    <string name="btncuadriceps">btnCuadriceps</string>
    <string name="btnfemoral">btnFemoral</string>
    <string name="btngluteos">btnGluteos</string>
    <string name="btnpantorrilla">btnPantorrilla</string>
    <string name="btnaductores">btnAductores</string>
    <string name="btnpierna">btnPierna</string>
    <string name="btnestiramiento">btnEstiramiento</string>
    <string name="btnespalda">btnEspalda</string>
    <string name="btnpecho">btnPecho</string>
    <string name="btnbiceps">btnBiceps</string>
    <string name="btnhombros">btnHombros</string>
    <string name="btnabdomen">btnAbdomen</string>
    <string name="btntriceps">btnTriceps</string>
    <string name="btnpoleapecho">btnPoleaPecho</string>
    <string name="btnremo">btnRemo</string>
    <string name="btnbarra">btnBarra</string>
    <string name="btnremomancuerna">btnRemoMancuerna</string>
    <string name="btnpoleaalta">btnPoleaAlta</string>
    <string name="btnremorow">btnRemoRow</string>
    <string name="btnremobarra">btnRemoBarra</string>
    <string name="btndominadas">btnDominadas</string>
    <string name="polea_al_pecho">POLEA AL PECHO</string>
    <string name="encabezado1">Guía para realizar el ejercicio</string>
    <string name="posici_n_inicial">Posición inicial</string>
    <string name="sentado_muslos_bajo_las_partes_acolchadas_barra_agarrada_en_supinaci_n_manos_separadas_a_la_anchura_de_los_hombros_manteniendo_la_espalda_recta">Sentado, muslos bajo las partes acolchadas, barra agarrada en supinación, manos separadas a la anchura de los hombros. Manteniendo la espalda recta.</string>
    <string name="ejecucion">Ejecución</string>
    <string name="txtEjecucion">Tira de la barra hasta la parte superior del pecho. Mantenga la contracción por un momento, los hombros bien atrás antes de volver lentamente a la posición inicial.</string>
</resources>