<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Activity_Ayuda">


    <ImageView
        android:src="@drawable/ayuda"
        android:contentDescription="@string/imagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnOrganizar"
            android:layout_width="249dp"
            android:layout_height="94dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="526dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/boton2"
            android:visibility="visible" />


        <Button
            android:id="@+id/btnHipertrofia"
            android:layout_width="240dp"
            android:layout_height="93dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="83dp"
            android:layout_marginBottom="392dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/boton3"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnConsejos"
            android:layout_width="246dp"
            android:layout_height="97dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="261dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/boton4"
            android:visibility="visible" />


    </RelativeLayout>


</FrameLayout>