<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Activity_Casa">


    <ImageView
        android:src="@drawable/menu_gym"
        android:contentDescription="@string/imagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnParteSuperior"
            android:layout_width="269dp"
            android:layout_height="104dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="71dp"
            android:layout_marginBottom="441dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/boton5"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnParteInferior"
            android:layout_width="269dp"
            android:layout_height="104dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="282dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/boton6"
            android:visibility="visible" />


        <Button
            android:id="@+id/btnAyuda"
            android:layout_width="269dp"
            android:layout_height="104dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="71dp"
            android:layout_marginBottom="77dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/boton7"
            android:visibility="visible" />


    </RelativeLayout>

</FrameLayout>