<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    >


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="104dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/portada"
        android:contentDescription="@string/imagenportada"/>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="268dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/ivLogo"
        android:fontFamily="@font/poppins_negrita"
        android:text="@string/Titulo_Organizacion"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtParrafo1"
        android:layout_width="357dp"
        android:layout_height="154dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_normal"
        android:text="@string/Parrafo1_organizacion"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtParrafo2"
        android:layout_width="359dp"
        android:layout_height="264dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_normal"
        android:text="@string/Parrafo2_organizacion"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtFooter"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="688dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/poppins_negrita"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="	#ffe135"
        android:textSize="20sp" />


</RelativeLayout>