<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/tigmar_normal"
        android:text="@string/polea_al_pecho"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="331dp"
        android:layout_height="247dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="38dp"
        app:srcCompat="@drawable/polea_pecho"
        android:contentDescription="@string/imagen"/>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/poppins_negrita"
        android:text="@string/encabezado1"
        android:textAlignment="center"
        android:textColor="#fdee00"
        android:textSize="24sp"
        android:minHeight="48dp"/>

    <TextView
        android:id="@+id/txtTitulo3"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/poppins_negrita"
        android:text="@string/posici_n_inicial"
        android:textAlignment="textStart"
        android:textColor="	#7fffd4"
        android:textSize="20sp"
        android:minHeight="48dp"/>

    <TextView
        android:id="@+id/txtTitulo6"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/poppins_negrita"
        android:minHeight="48dp"
        android:text="@string/sentado_muslos_bajo_las_partes_acolchadas_barra_agarrada_en_supinaci_n_manos_separadas_a_la_anchura_de_los_hombros_manteniendo_la_espalda_recta"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtTitulo4"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="566dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/poppins_negrita"
        android:minHeight="48dp"
        android:text="@string/ejecucion"
        android:textAlignment="textStart"
        android:textColor="	#7fffd4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTitulo5"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/poppins_negrita"
        android:minHeight="50dp"
        android:text="@string/txtEjecucion"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>